# API_Development

./: .gitignore  README.md
01_baseline/: README.md  fantasy_data.db  requirements.txt
02_api_implementation/: README.md
02_api_implementation/src/: crud.py  main.py  schemas.py
03_api_documentation/: README.md
03_api_documentation/src/: database.py  main.py  test_crud.py  test_main.py
04_cloud/: Dockerfile  README.md
04_cloud/src/: models.py
05_api_as_product/: README.md
05_api_as_product/sdk/: pyproject.toml
05_api_as_product/sdk/src/swcpy/: __init__.py  swc_client.py  swc_config.py
05_api_as_product/sdk/tests/: test_swcpy.py
sdk/: README.md
sdk/src/swcpy/: swc_client.py
src/: requirements.txt
