# setuptools를 프로젝트의 빌드 백엔드로 사용한다.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 패키지의 이름, 버전, 설명, 개발자 등 기본 메타데이터를 설정한다.
[project]
name = "swcpy"
version = "0.0.1"
authors = [
    { name="[HeonSu]" },
]
description = "AI와 데이터 사이언스 API 책의 예제 SDK"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
]